2007-15-10 Alessandro Scalzo <alessandro@liralab.it>
	*src/libYARP_OS/src/NameServer.cpp
	Added --noauto option: if config file 
	is not found, name server exits.

2007-10-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: fix for problem reported by
	Marco Randazzo, where calling Port::read(...,true) and then
	failing to eventually call Port::reply(...) causes a crash.

	* src/libYARP_OS/harness/PortTest.cpp: regression test for
	Marco Randazzo's problem.

2007-10-08 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_dev/mei
	* src/libYARP_dev/meiMotionControl
	* src/libYARP_dev/picolo_grabber
	* src/libYARP_dev/cyberglove
	*                /e504
	*                /fob
	*                /joypres

	Removed as previously planned. They will be placed in separate
	repositories. Could not redistribute them for violation of copyright.
	
2007-10-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpfs/yarpfs.cpp: directory structure basically in 
	place, and read/write operations work.

2007-10-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpfs/yarpfs.cpp: some experimental code for mapping from
	the YARP Network to a file system (analogous to the /proc
	directory on Linux).  Pre-alpha, not included in the main YARP
	build.

2007-10-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Network.h: add helper method
	for once off command/response actions, Network::write.

	* src/libYARP_OS/src/NameServer.cpp: start offering responses from
	the name server that are in standard (bottle) format.
	Historically, the name server has been using its own idiosyncratic
	protocols (since it was written before the rest of YARP existed).
	The low-level protocols were brought into line with standard yarp
	ports some time back, but the actual commands and responses
	continued to be defined in terms of strings rather than nested
	structures.  The new changes offer nested (bottle-compatible)