@@ -1,7 +1,15 @@
-2007-15-10 Alessandro Scalzo <alessandro@liralab.it>
-	*src/libYARP_OS/src/NameServer.cpp
-	Added --noauto option: if config file 
-	is not found, name server exits.
+2007-10-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Companion.cpp: added "yarp forward"
+	capability, to forward commands through an intermediary.  This is
+	useful for monitoring RPC command/reply sequences.  Streaming
+	messages can of course already be monitored with "yarp read".
+	This is experimental rather than polished work.
+	
+2007-10-15 Alessandro Scalzo <alessandro@liralab.it>
+
+	* src/libYARP_OS/src/NameServer.cpp: Added --noauto option: if
+	config file is not found, name server exits.
 
 2007-10-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
